@@ -11,9 +11,7 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import tqs.proudpapers.entity.Client;
 import tqs.proudpapers.entity.ClientDTO;
 import tqs.proudpapers.entity.Product;
-import tqs.proudpapers.repository.ClientRepository;
 import tqs.proudpapers.repository.ProductRepository;
-import tqs.proudpapers.service.impl.ClientServiceImpl;
 import tqs.proudpapers.service.impl.ProductServiceImpl;
 
 import java.awt.*;
@@ -53,7 +51,7 @@ public class ProductService_WithMock {
 
     @Test
     public void whenAtmamun_thenReturnAtmamun() {
-        Mockito.when(repository.getProductByNameContains(atmamun.getName())).thenReturn(List.of(atmamun));
+        Mockito.when(repository.getProductByNameContains(atmamun.getName())).thenReturn(Arrays.asList(atmamun));
         List<Product> products = service.searchByKeyWord(atmamun.getName());
 
         assertEquals(1, products.size());
@@ -82,7 +80,7 @@ public class ProductService_WithMock {
         Product b3 = new Product();
         b3.setName("Book C");
 
-        List<Product> products = List.of(b1, b2, b3);
+        List<Product> products = Arrays.asList(b1, b2, b3);
 
         Mockito.when(repository.getProductByNameContains("Book")).thenReturn(products);
 
